--- a/notebooks/Chapter_1.ipynb
+++ b/notebooks/Chapter_1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter 1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPn0vXlvU19n1p/iHFkw1J/",
+      "authorship_tag": "ABX9TyOyIUkfU/bMhFfcNIkA1dnG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -123,9 +123,7 @@
         "* Polarity of symetrical bonds creates the next order of electrostatic charge, known as a fucking quadropole.\n",
         "\n",
         "Given two molecules $A$ and $B$ who have dipole and quadropole moments $\\mu_a, \\Theta_a$ and $\\mu_b, \\Theta_b$ at a seperation $r$ and with relative orientations given by $\\theta_A, \\theta_B$, and  $\\phi$, their interaction energy may be given as\n",
-        "$$U_{AB} = \\frac{\\mu_a\\mu_b}{4\\pi\\epsilon_0 r^3}f_1(\\theta_A, \\theta_B, \\phi)+ \\frac{\\mu_a\\Theta_B}{4\\pi\\epsilon_0 r^4}f_2(\\theta_A, \\theta_B, \\phi)\n",
-        "- \\frac{\\mu_b\\Theta_a}{4\\pi\\epsilon_0 r^4}f_2(\\theta_A, \\theta_B, \\phi)\n",
-        "+ \\frac{\\Theta_a\\Theta_b}{4\\pi\\epsilon_0 r^5}f_3(\\theta_A, \\theta_B, \\phi)$$\n",
+        "$$U_{AB} = \\frac{\\mu_a\\mu_b}{4\\pi\\epsilon_0 r^3}f_1(\\theta_A, \\theta_B, \\phi) + \\frac{\\mu_a\\Theta_B}{4\\pi\\epsilon_0 r^4}f_2(\\theta_A, \\theta_B, \\phi) -\\frac{\\mu_b\\Theta_a}{4\\pi\\epsilon_0 r^4}f_2(\\theta_A, \\theta_B, \\phi) + \\frac{\\Theta_a\\Theta_b}{4\\pi\\epsilon_0 r^5}f_3(\\theta_A, \\theta_B, \\phi)$$\n",
         "\n",
         "Okokokok slow down there, let's make sense of this."
       ]
